# perch

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
plugins/: perch-bridge.js
src/: main.js  mascot-frames.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  ingest.rs  lib.rs  main.rs  notifications.rs  plugin_installer.rs  sse_client.rs  state_machine.rs  tray.rs
