[package]
name = "opencode-pet"
version = "0.1.0"
description = "A mascot/pet companion that watches opencode coding-agent sessions"
authors = ["you"]
edition = "2021"

[lib]
name = "opencode_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(target_os = "macos")'.dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
